--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,14 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "npm",
-			"script": "build",
-			"path": "storytime-frontend/",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/storytime-frontend"
+			},
+			"command": "ng serve --open",
 			"group": "build",
 			"problemMatcher": [],
 			"label": "npm: serve - storytime-frontend",
-			"detail": "ng serve --open"
 		}
 	]
 }
